completed comparing_models user def function to loop through all linear models, produce their comparative stats, and rank them to choose the top 3.

--- a/notebooks/linear_model_prototyping.ipynb
+++ b/notebooks/linear_model_prototyping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 299,
    "id": "8732a6f4",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 300,
    "id": "12c11ce3",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "[1 rows x 325 columns]"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 301,
    "id": "74ab39a5",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
        "[1 rows x 325 columns]"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 302,
    "id": "fa02fa9c",
    "metadata": {},
    "outputs": [],
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 303,
    "id": "22f46585",
    "metadata": {},
    "outputs": [],
@@ -1796,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 304,
    "id": "a1a03760",
    "metadata": {},
    "outputs": [],
@@ -1806,25 +1806,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "35f78dd4",
+   "execution_count": 325,
+   "id": "966c00aa",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "'return' outside function (2769372726.py, line 54)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[298]\u001b[39m\u001b[32m, line 54\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mreturn final_df\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m 'return' outside function\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\utils\\validation.py:1352: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:406: ConvergenceWarning: lbfgs failed to converge after 100 iteration(s) (status=1):\n",
+      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT\n",
+      "\n",
+      "Increase the number of iterations to improve the convergence (max_iter=100).\n",
+      "You might also want to scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>roc_auc</th>\n",
+       "      <th>pr_auc</th>\n",
+       "      <th>Log_loss</th>\n",
+       "      <th>Brier_Score_Loss</th>\n",
+       "      <th>Matthews Correlation Coefficient</th>\n",
+       "      <th>model_used</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.903291</td>\n",
+       "      <td>0.827796</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.709374</td>\n",
+       "      <td>LogisticRegression()</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    roc_auc    pr_auc  Log_loss  Brier_Score_Loss  \\\n",
+       "0  0.903291  0.827796       NaN               NaN   \n",
+       "\n",
+       "   Matthews Correlation Coefficient            model_used  \n",
+       "0                          0.709374  LogisticRegression()  "
+      ]
+     },
+     "execution_count": 325,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "est.fit(X_train, y_train)\n",
+    "y_pred = est.predict(X_test)\n",
+    "decision_scores = est.decision_function(X_test)\n",
+    "roc_auc = roc_auc_score(y_true = y_test, y_score = decision_scores)\n",
+    "pr_auc = average_precision_score(y_true = y_test, y_score = decision_scores)\n",
+    "ll = np.nan # models that don't have predict_proba cannot be used for log_loss.\n",
+    "bcl = np.nan # models that don't have predict_proba cannot be used for bcl.\n",
+    "mc = matthews_corrcoef(y_true = y_test, y_pred = y_pred)\n",
+    "temp_df = pd.DataFrame(\n",
+    "        data =  {\n",
+    "    \"roc_auc\": roc_auc,\n",
+    "    \"pr_auc\": pr_auc,\n",
+    "    \"Log_loss\": ll,\n",
+    "    \"Brier_Score_Loss\": bcl,\n",
+    "    \"Matthews Correlation Coefficient\": mc,\n",
+    "    \"model_used\": est\n",
+    "},\n",
+    "index = pd.RangeIndex(0, 1)\n",
+    ")\n",
+    "temp_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59ad3b1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = [LogisticRegression(), RidgeClassifier()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68794bdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\utils\\validation.py:1352: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:406: ConvergenceWarning: lbfgs failed to converge after 100 iteration(s) (status=1):\n",
+      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT\n",
+      "\n",
+      "Increase the number of iterations to improve the convergence (max_iter=100).\n",
+      "You might also want to scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\linear_model\\_ridge.py:1332: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[    roc_auc    pr_auc  Log_loss  Brier_Score_Loss  \\\n",
+       " 0  0.903291  0.827796  3.377123          0.078317   \n",
+       " \n",
+       "    Matthews Correlation Coefficient            model_used  \n",
+       " 0                          0.709374  LogisticRegression()  ,\n",
+       "     roc_auc    pr_auc  Log_loss  Brier_Score_Loss  \\\n",
+       " 0  0.891637  0.816381       NaN               NaN   \n",
+       " \n",
+       "    Matthews Correlation Coefficient         model_used  \n",
+       " 0                           0.69969  RidgeClassifier()  ]"
+      ]
+     },
+     "execution_count": 333,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_list = []\n",
+    "for est in models:\n",
+    "    if hasattr(est, \"decision_function\") and callable(getattr(est, \"decision_function\")) and hasattr(est, \"predict_proba\") == False:\n",
+    "                est.fit(X_train, y_train)\n",
+    "                y_pred = est.predict(X_test)\n",
+    "                decision_scores = est.decision_function(X_test)\n",
+    "                roc_auc = roc_auc_score(y_true = y_test, y_score = decision_scores)\n",
+    "                pr_auc = average_precision_score(y_true = y_test, y_score = decision_scores)\n",
+    "                ll = np.nan # models that don't have predict_proba cannot be used for log_loss.\n",
+    "                bcl = np.nan # models that don't have predict_proba cannot be used for bcl.\n",
+    "                mc = matthews_corrcoef(y_true = y_test, y_pred = y_pred)\n",
+    "                temp_df = pd.DataFrame(\n",
+    "                        data =  {\n",
+    "                    \"roc_auc\": roc_auc,\n",
+    "                    \"pr_auc\": pr_auc,\n",
+    "                    \"Log_loss\": ll,\n",
+    "                    \"Brier_Score_Loss\": bcl,\n",
+    "                    \"Matthews Correlation Coefficient\": mc,\n",
+    "                    \"model_used\": est\n",
+    "                },\n",
+    "                index = pd.RangeIndex(0, 1)\n",
+    "                )\n",
+    "                model_list.append(temp_df)\n",
+    "\n",
+    "                \n",
+    "    elif hasattr(est, \"predict_proba\") and callable(getattr(est, \"predict\")):\n",
+    "                est.fit(X_train, y_train)\n",
+    "                y_pred = est.predict(X_test)\n",
+    "                pos_probabilites = est.predict_proba(X_test)[:, 1]\n",
+    "                roc_auc = roc_auc_score(y_true = y_test, y_score = pos_probabilites)\n",
+    "                pr_auc = average_precision_score(y_true = y_test, y_score = pos_probabilites)\n",
+    "                ll = log_loss(y_true = y_test, y_pred = y_pred)\n",
+    "                bcl = brier_score_loss(y_true = y_test, y_proba = pos_probabilites)\n",
+    "                mc = matthews_corrcoef(y_true = y_test, y_pred = y_pred)\n",
+    "                temp_df = pd.DataFrame(\n",
+    "                        data =  {\n",
+    "                    \"roc_auc\": roc_auc,\n",
+    "                    \"pr_auc\": pr_auc,\n",
+    "                    \"Log_loss\": ll,\n",
+    "                    \"Brier_Score_Loss\": bcl,\n",
+    "                    \"Matthews Correlation Coefficient\": mc,\n",
+    "                    \"model_used\": est\n",
+    "                },\n",
+    "                index = pd.RangeIndex(0, 1)\n",
+    "                )\n",
+    "                model_list.append(temp_df)\n",
+    "pd.concat(objs=model_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "id": "35f78dd4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def comparing_models(models, X_train, y_train, X_test, y_test):\n",
     "    \"\"\" Multiple Classification metrics used to determine the top 3 performing models\n",
     "    requires a list of models.\"\"\"\n",
     "\n",
-    "    linear_models = pd.DataFrame()\n",
+    "    model_list = []\n",
     "    for est in models:\n",
     "        if hasattr(est, \"decision_function\") and callable(getattr(est, \"decision_function\")) and hasattr(est, \"predict_proba\") == False:\n",
     "                    est.fit(X_train, y_train)\n",
@@ -1846,8 +2044,9 @@
     "                    },\n",
     "                    index = pd.RangeIndex(0, 1)\n",
     "                    )\n",
+    "                    model_list.append(temp_df)\n",
     "\n",
-    "\n",
+    "                    \n",
     "        elif hasattr(est, \"predict_proba\") and callable(getattr(est, \"predict\")):\n",
     "                    est.fit(X_train, y_train)\n",
     "                    y_pred = est.predict(X_test)\n",
@@ -1868,17 +2067,16 @@
     "                    },\n",
     "                    index = pd.RangeIndex(0, 1)\n",
     "                    )\n",
+    "                    model_list.append(temp_df)\n",
+    "    final_df = pd.concat(objs=model_list)\n",
     "\n",
-    "        final_df = pd.concat(\n",
-    "                objs=[linear_models, temp_df],\n",
-    "                axis = 1\n",
-    "            )\n",
-    "    return final_df    \n"
+    "        \n",
+    "    return final_df    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 340,
    "id": "bf30ab1d",
    "metadata": {},
    "outputs": [
@@ -1933,11 +2131,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0.903291</td>\n",
+       "      <td>0.827796</td>\n",
+       "      <td>3.377123</td>\n",
+       "      <td>0.078317</td>\n",
+       "      <td>0.709374</td>\n",
+       "      <td>LogisticRegression()</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
        "      <td>0.891637</td>\n",
        "      <td>0.816381</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.69969</td>\n",
+       "      <td>0.699690</td>\n",
        "      <td>RidgeClassifier()</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1946,13 +2153,15 @@
       ],
       "text/plain": [
        "    roc_auc    pr_auc  Log_loss  Brier_Score_Loss  \\\n",
+       "0  0.903291  0.827796  3.377123          0.078317   \n",
        "0  0.891637  0.816381       NaN               NaN   \n",
        "\n",
-       "   Matthews Correlation Coefficient         model_used  \n",
-       "0                           0.69969  RidgeClassifier()  "
+       "   Matthews Correlation Coefficient            model_used  \n",
+       "0                          0.709374  LogisticRegression()  \n",
+       "0                          0.699690     RidgeClassifier()  "
       ]
      },
-     "execution_count": 297,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
