added LDA and QDA models into linear modeling workbook.

--- a/notebooks/linear_model_prototyping.ipynb
+++ b/notebooks/linear_model_prototyping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "8732a6f4",
    "metadata": {},
    "outputs": [],
@@ -41,6 +41,9 @@
     "# Linear Modeling\n",
     "from sklearn.linear_model import RidgeClassifier, LogisticRegression, RidgeClassifierCV, LogisticRegressionCV, SGDClassifier, Perceptron, PassiveAggressiveClassifier\n",
     "\n",
+    "# LDA QDA Modeling\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis, QuadraticDiscriminantAnalysis\n",
+    "\n",
     "# Metrics\n",
     "from sklearn.metrics import confusion_matrix, balanced_accuracy_score, ConfusionMatrixDisplay, classification_report, precision_recall_curve, PrecisionRecallDisplay, log_loss, brier_score_loss, roc_curve, roc_auc_score, RocCurveDisplay, det_curve, DetCurveDisplay, fbeta_score, class_likelihood_ratios, average_precision_score, matthews_corrcoef"
    ]
@@ -55,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "12c11ce3",
    "metadata": {},
    "outputs": [
@@ -185,7 +188,7 @@
        "[1 rows x 325 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "74ab39a5",
    "metadata": {},
    "outputs": [
@@ -329,7 +332,7 @@
        "[1 rows x 325 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "fa02fa9c",
    "metadata": {},
    "outputs": [],
@@ -357,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "22f46585",
    "metadata": {},
    "outputs": [],
@@ -1739,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "35f78dd4",
    "metadata": {},
    "outputs": [],
@@ -1802,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "72eacb8c",
    "metadata": {},
    "outputs": [
@@ -1819,17 +1822,19 @@
     "models = [LogisticRegression(random_state=42), \n",
     "          RidgeClassifier(random_state=42), \n",
     "          RidgeClassifierCV(alphas=np.logspace(-6, 6, 13)),\n",
-    "          LogisticRegressionCV(penalty='l1', solver='liblinear'),\n",
-    "          LogisticRegressionCV(penalty='l2'),\n",
-    "          LogisticRegressionCV(penalty='elasticnet'),\n",
+    "          #LogisticRegressionCV(penalty='l1', solver='saga'),\n",
+    "          #LogisticRegressionCV(penalty='l2', solver='sag'),\n",
+    "          #LogisticRegressionCV(penalty='elasticnet', solver='saga'),\n",
     "          SGDClassifier(),\n",
     "          Perceptron(),\n",
-    "          PassiveAggressiveClassifier()]"
+    "          PassiveAggressiveClassifier(),\n",
+    "          LinearDiscriminantAnalysis(solver='lsqr', shrinkage=0.1),\n",
+    "          QuadraticDiscriminantAnalysis(reg_param=0.1)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "bf30ab1d",
    "metadata": {},
    "outputs": [
@@ -1852,15 +1857,159 @@
       "  y = column_or_1d(y, warn=True)\n",
       "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\linear_model\\_ridge.py:1332: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
-      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1780: FutureWarning: The default value for l1_ratios will change from None to (0.0,) in version 1.10. From version 1.10 onwards, only array-like with values in [0, 1] will be allowed, None will be forbidden. To avoid this warning, explicitly set a value, e.g. l1_ratios=(0,).\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1811: FutureWarning: 'penalty' was deprecated in version 1.8 and will be removed in 1.10. To avoid this warning, leave 'penalty' set to its default value and use 'l1_ratios' instead. Use l1_ratios=(0,) instead of penalty='l2'  and l1_ratios=(1,) instead of penalty='l1'.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1823: FutureWarning: The fitted attributes of LogisticRegressionCV will be simplified in scikit-learn 1.10 to remove redundancy. Set`use_legacy_attributes=False` to enable the new behavior now, or set it to `True` to silence this warning during the transition period while keeping the deprecated behavior for the time being. The default value of use_legacy_attributes will change from True to False in scikit-learn 1.10. See the docstring of LogisticRegressionCV for more details.\n",
-      "  warnings.warn(\n",
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\utils\\validation.py:1352: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\utils\\validation.py:1352: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\utils\\validation.py:1352: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\utils\\validation.py:1352: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
       "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\utils\\validation.py:1352: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>roc_auc</th>\n",
+       "      <th>pr_auc</th>\n",
+       "      <th>Log_loss</th>\n",
+       "      <th>Brier_Score_Loss</th>\n",
+       "      <th>Matthews Correlation Coefficient</th>\n",
+       "      <th>model_used</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.903291</td>\n",
+       "      <td>0.827796</td>\n",
+       "      <td>3.377123</td>\n",
+       "      <td>0.078317</td>\n",
+       "      <td>0.709374</td>\n",
+       "      <td>LogisticRegression(random_state=42)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.891637</td>\n",
+       "      <td>0.816381</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.699690</td>\n",
+       "      <td>RidgeClassifier(random_state=42)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.891637</td>\n",
+       "      <td>0.816381</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.699690</td>\n",
+       "      <td>RidgeClassifierCV(alphas=array([1.e-06, 1.e-05...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.886763</td>\n",
+       "      <td>0.791076</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.646806</td>\n",
+       "      <td>SGDClassifier()</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.849885</td>\n",
+       "      <td>0.726582</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.539743</td>\n",
+       "      <td>Perceptron()</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.772208</td>\n",
+       "      <td>0.596044</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.384352</td>\n",
+       "      <td>PassiveAggressiveClassifier()</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.884546</td>\n",
+       "      <td>0.788636</td>\n",
+       "      <td>3.910938</td>\n",
+       "      <td>0.087897</td>\n",
+       "      <td>0.659563</td>\n",
+       "      <td>LinearDiscriminantAnalysis(shrinkage=0.1, solv...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.856036</td>\n",
+       "      <td>0.660221</td>\n",
+       "      <td>5.638424</td>\n",
+       "      <td>0.155831</td>\n",
+       "      <td>0.479314</td>\n",
+       "      <td>QuadraticDiscriminantAnalysis(reg_param=0.1)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    roc_auc    pr_auc  Log_loss  Brier_Score_Loss  \\\n",
+       "0  0.903291  0.827796  3.377123          0.078317   \n",
+       "0  0.891637  0.816381       NaN               NaN   \n",
+       "0  0.891637  0.816381       NaN               NaN   \n",
+       "0  0.886763  0.791076       NaN               NaN   \n",
+       "0  0.849885  0.726582       NaN               NaN   \n",
+       "0  0.772208  0.596044       NaN               NaN   \n",
+       "0  0.884546  0.788636  3.910938          0.087897   \n",
+       "0  0.856036  0.660221  5.638424          0.155831   \n",
+       "\n",
+       "   Matthews Correlation Coefficient  \\\n",
+       "0                          0.709374   \n",
+       "0                          0.699690   \n",
+       "0                          0.699690   \n",
+       "0                          0.646806   \n",
+       "0                          0.539743   \n",
+       "0                          0.384352   \n",
+       "0                          0.659563   \n",
+       "0                          0.479314   \n",
+       "\n",
+       "                                          model_used  \n",
+       "0                LogisticRegression(random_state=42)  \n",
+       "0                   RidgeClassifier(random_state=42)  \n",
+       "0  RidgeClassifierCV(alphas=array([1.e-06, 1.e-05...  \n",
+       "0                                    SGDClassifier()  \n",
+       "0                                       Perceptron()  \n",
+       "0                      PassiveAggressiveClassifier()  \n",
+       "0  LinearDiscriminantAnalysis(shrinkage=0.1, solv...  \n",
+       "0       QuadraticDiscriminantAnalysis(reg_param=0.1)  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
