added linear svc model to compartive models.

--- a/notebooks/linear_model_prototyping.ipynb
+++ b/notebooks/linear_model_prototyping.ipynb
@@ -41,6 +41,9 @@
     "# Linear Modeling\n",
     "from sklearn.linear_model import RidgeClassifier, LogisticRegression, RidgeClassifierCV, LogisticRegressionCV, SGDClassifier, Perceptron, PassiveAggressiveClassifier\n",
     "\n",
+    "# Distance Modeling\n",
+    "from sklearn.svm import LinearSVC\n",
+    "\n",
     "# LDA QDA Modeling\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis, QuadraticDiscriminantAnalysis\n",
     "\n",
@@ -58,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "12c11ce3",
    "metadata": {},
    "outputs": [
@@ -188,7 +191,7 @@
        "[1 rows x 325 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "74ab39a5",
    "metadata": {},
    "outputs": [
@@ -332,7 +335,7 @@
        "[1 rows x 325 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "fa02fa9c",
    "metadata": {},
    "outputs": [],
@@ -360,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "22f46585",
    "metadata": {},
    "outputs": [],
@@ -1742,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "35f78dd4",
    "metadata": {},
    "outputs": [],
@@ -1805,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "72eacb8c",
    "metadata": {},
    "outputs": [
@@ -1828,13 +1831,14 @@
     "          SGDClassifier(),\n",
     "          Perceptron(),\n",
     "          PassiveAggressiveClassifier(),\n",
-    "          LinearDiscriminantAnalysis(solver='lsqr', shrinkage=0.1),\n",
-    "          QuadraticDiscriminantAnalysis(reg_param=0.1)]"
+    "          LinearDiscriminantAnalysis(),\n",
+    "          QuadraticDiscriminantAnalysis(reg_param=0.1),\n",
+    "          LinearSVC()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "bf30ab1d",
    "metadata": {},
    "outputs": [
@@ -1856,6 +1860,8 @@
       "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\linear_model\\_ridge.py:1332: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
       "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\linear_model\\_ridge.py:1332: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\utils\\validation.py:1352: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
       "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\utils\\validation.py:1352: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
@@ -1928,11 +1934,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.886763</td>\n",
-       "      <td>0.791076</td>\n",
+       "      <td>0.864778</td>\n",
+       "      <td>0.773071</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.646806</td>\n",
+       "      <td>0.639011</td>\n",
        "      <td>SGDClassifier()</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1946,21 +1952,21 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.772208</td>\n",
-       "      <td>0.596044</td>\n",
+       "      <td>0.871195</td>\n",
+       "      <td>0.758631</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.384352</td>\n",
+       "      <td>0.592215</td>\n",
        "      <td>PassiveAggressiveClassifier()</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.884546</td>\n",
-       "      <td>0.788636</td>\n",
-       "      <td>3.910938</td>\n",
-       "      <td>0.087897</td>\n",
-       "      <td>0.659563</td>\n",
-       "      <td>LinearDiscriminantAnalysis(shrinkage=0.1, solv...</td>\n",
+       "      <td>0.891981</td>\n",
+       "      <td>0.816507</td>\n",
+       "      <td>3.488335</td>\n",
+       "      <td>0.080379</td>\n",
+       "      <td>0.699812</td>\n",
+       "      <td>LinearDiscriminantAnalysis()</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -1971,6 +1977,15 @@
        "      <td>0.479314</td>\n",
        "      <td>QuadraticDiscriminantAnalysis(reg_param=0.1)</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.899084</td>\n",
+       "      <td>0.820990</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.707575</td>\n",
+       "      <td>LinearSVC()</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1980,21 +1995,23 @@
        "0  0.903291  0.827796  3.377123          0.078317   \n",
        "0  0.891637  0.816381       NaN               NaN   \n",
        "0  0.891637  0.816381       NaN               NaN   \n",
-       "0  0.886763  0.791076       NaN               NaN   \n",
+       "0  0.864778  0.773071       NaN               NaN   \n",
        "0  0.849885  0.726582       NaN               NaN   \n",
-       "0  0.772208  0.596044       NaN               NaN   \n",
-       "0  0.884546  0.788636  3.910938          0.087897   \n",
+       "0  0.871195  0.758631       NaN               NaN   \n",
+       "0  0.891981  0.816507  3.488335          0.080379   \n",
        "0  0.856036  0.660221  5.638424          0.155831   \n",
+       "0  0.899084  0.820990       NaN               NaN   \n",
        "\n",
        "   Matthews Correlation Coefficient  \\\n",
        "0                          0.709374   \n",
        "0                          0.699690   \n",
        "0                          0.699690   \n",
-       "0                          0.646806   \n",
+       "0                          0.639011   \n",
        "0                          0.539743   \n",
-       "0                          0.384352   \n",
-       "0                          0.659563   \n",
+       "0                          0.592215   \n",
+       "0                          0.699812   \n",
        "0                          0.479314   \n",
+       "0                          0.707575   \n",
        "\n",
        "                                          model_used  \n",
        "0                LogisticRegression(random_state=42)  \n",
@@ -2003,11 +2020,12 @@
        "0                                    SGDClassifier()  \n",
        "0                                       Perceptron()  \n",
        "0                      PassiveAggressiveClassifier()  \n",
-       "0  LinearDiscriminantAnalysis(shrinkage=0.1, solv...  \n",
-       "0       QuadraticDiscriminantAnalysis(reg_param=0.1)  "
+       "0                       LinearDiscriminantAnalysis()  \n",
+       "0       QuadraticDiscriminantAnalysis(reg_param=0.1)  \n",
+       "0                                        LinearSVC()  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
